--- a/front/src/app/tasks/create/create.scss
+++ b/front/src/app/tasks/create/create.scss
@@ -26,7 +26,12 @@ h2 {
 .form-group input[type="text"],
 .form-group select,
 .form-group textarea {
-  @extend input[type="text"];
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 10px;
 }
 
 button[type="submit"] {
